@@ -7,5 +7,5 @@ OPTIONS_FILE_SET+=GSASL
 OPTIONS_FILE_UNSET+=IDN
 OPTIONS_FILE_UNSET+=MSMTPQ
 OPTIONS_FILE_SET+=NLS
-OPTIONS_FILE_SET+=GNUTLS
-OPTIONS_FILE_UNSET+=OPENSSL
+OPTIONS_FILE_UNSET+=GNUTLS
+OPTIONS_FILE_SET+=OPENSSL
